--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Working...</h1>
+
+    <form id="solve-form">
+        <button id="solve-btn">Solve Button</button>
+    </form>
     <!-- Socket.io -->
     <script src="/socket.io/socket.io.js"></script>
     <!-- Client scripts -->
