--- a/client/index.html
+++ b/client/index.html
@@ -12,15 +12,19 @@
 </head>
 <body>
     <div id="start-screen">
-        <h1 class="title">Flow Free Multiplayer</h1>
-        <div class="buttons-group">
-
-            <h3>Start your game!</h3>
-            <br>
-            <button type="submit" id="create-room">Create new game</button>
-            <div class='or'>OR</div>
-            <input type="text" placeholder="Game Code" id="game-code" autocomplete="off">
-            <button type="submit" id="join-room">Join room</button>
+        <canvas id="start-canvas"></canvas>
+        <script src="/scripts/animations/StartCanvas.js"></script>
+        <script src="/scripts/animations/Path.js"></script>
+        <div id="start-options">
+            <h1 class="title">Flow Free Multiplayer</h1>
+            <div class="buttons-group">
+                <h3>Start your game!</h3>
+                <br>
+                <button type="submit" id="create-room">Create new game</button>
+                <div class='or'>OR</div>
+                <input type="text" placeholder="Game Code" id="game-code" autocomplete="off">
+                <button type="submit" id="join-room">Join room</button>
+            </div>
         </div>
     </div>
     
@@ -69,7 +73,6 @@
     </div>
     
     <script src="/scripts/logic/Utility.js"></script>
-    <script src="/scripts/logic/Path.js"></script>
     <script src="/scripts/logic/Debug.js"></script>
     <script src="/scripts/logic/enums/Colors.js"></script>
     <script src="/scripts/logic/enums/Positions.js"></script>
