Drawing map fix, updating lobby, counting points fix, winner, canTouch option, astar fix, hints update
Drawing map on client side was broken, mouse events coordinates were wrongly rounded and it cause problems with drawing pipes. Lobby options are now displayed for both connected clients in real-time, also the canTouch option was added and handled. Counting points now works across all generated maps (previously only one map was counted and after changing to next one points where reseted. Winner and loser are shown (atm. alert only) after time that was set in lobby passed. Small astar fix was bade - when map has been stoped (too many nodes created) it was shown as solvable map, it was fixed. Hints has now fixed amount of use

--- a/client/index.html
+++ b/client/index.html
@@ -48,9 +48,9 @@
                 <h3>Lobby Settings</h3>
                 <br>
                 Number of hints 
-                <input type="number" class='option' id='hints-amount' value='1'>
+                <input type="number" class='option' id='hints-amount' value='4'>
                 Time limit 
-                <input type="number" class='option' id='time-limit' value='5'>
+                <input type="number" class='option' id='time-limit' value='1'>
                 Map size 
                 <input type="number" class='option' id='map-size' value='5'>
                 Number of colors 
@@ -59,21 +59,20 @@
                 <input type="number" class='option' id='map-number' value='2'>
                 Pipes can touch
                 <label class="switch">
-                    <input type="checkbox" id='can-touch'>
+                    <input type="checkbox" id='can-touch' checked>
                     <span class="slider"></span>
                 </label>
             </div>
             <button type="submit" id='start-game'>START</button>
             <br>
-            <button id="switchButton">Switch</button>
         </div>
     </div>
 
     <div id="game-screen">
         <section class="game-section">
             <div class="game-info">
-                <span id="time-display">05:00</span>
-                <span id="points-display">3000 points</span>
+                <span id="time-display">00:00</span>
+                <span id="points-display">0 points</span>
             </div>
             <canvas id="game" width="700" height="700" style="border: solid 2px #FFF"></canvas>
             <button id="hints-btn" type="submit">Use hint</button>
