End screen update and winner & loser
End screen has been connected with the server and shows result of the game, points and completed maps (atm. maps are hard coded).

--- a/client/index.html
+++ b/client/index.html
@@ -85,21 +85,25 @@
     
     <div id="alertBox"></div>
 
-    <div class="game-end" id="gameEnd">
-        <span id="result">You won!</span>
-        <div class="game-info">
-            <div class="winner-info move-top" id="winner-info">
+    <div class="end-screen" id="end-screen">
+        <span id="result"></span>
+        <div class="end-info">
+            <div class="winner-info" id="winner-info">
                 <span id="winner-name">Nickname</span>
                 <span id="winner-points">0 points</span>
                 <div class="canvas-box">
+                    <button type="submit" class="arrow-btn left" id="winner-increase"><i class="fas fa-4x fa-chevron-left"></i></button>
                     <canvas width="500" height="500" id="winner-maps"></canvas>
+                    <button type="submit" class="arrow-btn right" id="winner-reduce"><i class="fas fa-4x fa-chevron-right"></i></button>
                 </div>
             </div>
-            <div class="loser-info move-top">
+            <div class="loser-info" id="loser-info">
                 <span id="loser-name">Nickname</span>
                 <span id="loser-points">0 points</span>
                 <div class="canvas-box">
+                    <button type="submit" class="arrow-btn left" id="loser-increase"><i class="fas fa-4x fa-chevron-left"></i></button>
                     <canvas width="500" height="500" id="loser-maps"></canvas>
+                    <button type="submit" class="arrow-btn right" id="loser-reduce"><i class="fas fa-4x fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
