Progress bar, Multithreading (Web Workers)
Progress bar shows what is the progress of generating maps when users starts game. Implemented multithreading with web workers for two functions - generating map and getting the hint, thanks to web workers now server is not blocked anymore when any of the connected user used hint button or start game button. Server can now handle multiple lobbys and multiple players at the same time without lagging or disconnecting players

--- a/client/index.html
+++ b/client/index.html
@@ -89,6 +89,15 @@
     
     <div id="alertBox"></div>
 
+    <div class="progress-alert">
+        <div class="bar-box">
+            <div class="progress-bar" progress="0"></div>
+        </div>
+        <div class="info-box">
+            <span id="progress-info">Initalizing...</span>
+        </div>
+    </div>
+
     <div class="end-screen" id="end-screen">
         <span id="result"></span>
         <div class="end-info">
