--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
             <h1 class="title">Flow Free Multiplayer</h1>
             <div class="buttons-group">
                 <h3>Set your nickname!</h3>
-                <input type="text" placeholder="Nickname" id="nickname" autocomplete="off" value='XXXXXXXXXXXXXXX'>
+                <input type="text" placeholder="Nickname" id="nickname" value="ellooo" autocomplete="off" value=''>
                 <br><br><br>
                 <h3>Start your game!</h3>
                 <br>
@@ -81,14 +81,15 @@
                 <span id="points-display">0 points</span>
             </div>
             <canvas id="game" width="700" height="700" style="border: solid 2px #FFF"></canvas>
-            <button id="hints-btn" type="submit"><span>Use hint</span></button>
-            <span id="hints-display">Hints remaining: ?</span>
-            <button id="change-btn" type="submit"><span>Next map</span></button>
+            <div class="game-buttons">
+                <div class="hints-box">
+                    <button id="hints-btn" type="submit"><span>Use hint</span></button>
+                    <span id="hints-display">Hints remaining: ?</span>
+                </div>
+                <button id="change-btn" type="submit"><span>Next map</span></button>
+            </div>
         </section>
     </div>
-    
-    <div id="alertBox"></div>
-
     <div class="progress-alert">
         <div class="bar-box">
             <div class="progress-bar" progress="0"></div>
@@ -122,6 +123,8 @@
             <button type="submit" id="reset-ui"><i class="fas fa-2x fa-arrow-left reset-arrow"></i>Back to lobby</button>
         </div>
     </div>
+
+    <div id="alertBox"></div>
 
     <script src="/scripts/logic/Utility.js"></script>
     <script src="/scripts/logic/Debug.js"></script>
