Test files has been formatted, working on lobbies

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
             autocomplete="off"
           />
           <button type="submit" id="join-room"><span>Join room</span></button>
+          <button type="submit" id="test-room"><span>TEST</span></button>
         </div>
       </div>
     </div>
