--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/alert.css" />
+    <link rel="stylesheet" href="css/lobbies.css" />
   </head>
   <body>
     <div id="start-screen">
@@ -116,14 +117,6 @@
         </div>
       </section>
     </div>
-    <div class="progress-alert">
-      <div class="bar-box">
-        <div class="progress-bar" progress="0"></div>
-      </div>
-      <div class="info-box">
-        <span id="progress-info">Initalizing...</span>
-      </div>
-    </div>
 
     <div class="end-screen" id="end-screen">
       <span id="result"></span>
@@ -162,6 +155,15 @@
     </button>
 
     <div id="alertBox"></div>
+
+    <div class="progress-alert">
+      <div class="bar-box">
+        <div class="progress-bar" progress="0"></div>
+      </div>
+      <div class="info-box">
+        <span id="progress-info">Initalizing...</span>
+      </div>
+    </div>
 
     <script src="/scripts/game/Utility.js"></script>
     <script src="/scripts/game/Debug.js"></script>
