--- a/client/lobbies.html
+++ b/client/lobbies.html
@@ -5,41 +5,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/b2771ccf1d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/lobbies.css" />
   </head>
   <body>
-    <!-- <div class="wrapper-box">
-      <div class="lobbies-box">
-        <table>
-          <tr>
-            <th>Host name</th>
-            <th>Version</th>
-            <th>Players</th>
-            <th>Status</th>
-          </tr>
-
-          <tr>
-            <div class="test"></div>
-          </tr>
-          <tr>
-            <div class="test"></div>
-          </tr>
-        </table>
+    <div class="lobby-box">
+      <div class="lobbies-list">
+        <div class="lobby-card">
+          <div class="top-text">
+            <ul>
+              <li>Host name</li>
+              <li>Gracz1</li>
+            </ul>
+            <ul>
+              <li>Players</li>
+              <li>1/2</li>
+            </ul>
+            <ul>
+              <li>Status</li>
+              <li><div class="status"></div></li>
+            </ul>
+          </div>
+          <div class="bottom-text">
+            <ul>
+              <li>Options</li>
+              <li>
+                <button type="submit" id="btn-display">
+                  <i class="fas fa-eye"></i>
+                  <span class="options-tooltip">
+                    OPTIONS
+                    <div class="columns">
+                      <div class="column">
+                        <ul>
+                          <li>Number of hints</li>
+                          <li>4</li>
+                          <li>Time limit</li>
+                          <li>1</li>
+                          <li>Map size</li>
+                          <li>5 x 5</li>
+                        </ul>
+                      </div>
+                      <div class="column">
+                        <ul>
+                          <li>Number of colors</li>
+                          <li>5</li>
+                          <li>Map number</li>
+                          <li>2</li>
+                          <li>Pipes can touch</li>
+                          <li>True</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </span>
+                </button>
+              </li>
+            </ul>
+            <div class="options">
+              <ul>
+                <li>Number of Hints</li>
+                <li>4</li>
+              </ul>
+              <ul>
+                <li>Number of colors</li>
+                <li>5</li>
+              </ul>
+              <ul>
+                <li>Time limit</li>
+                <li>1</li>
+              </ul>
+              <ul>
+                <li>Map number</li>
+                <li>2</li>
+              </ul>
+              <ul>
+                <li>Map size</li>
+                <li>5 x 5</li>
+              </ul>
+              <ul>
+                <li>Pipes can touch</li>
+                <li>True</li>
+              </ul>
+            </div>
+            <ul>
+              <li><button type="submit" id="btn-join">JOIN</button></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div> -->
-
-    <div class="lobby-elem">
-      <div class="top-text">
-        <ul>
-          <li>Host name</li>
-          <li>Gracz1</li>
-        </ul>
-        <ul>
-          <li>Status</li>
-          <li><div class="status"></div></li>
-        </ul>
-      </div>
-      <div class="bottom-text"></div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="Lobbies.js"></script>
