--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
             type="text"
             placeholder="Nickname"
             id="nickname"
-            value=""
+            value="XXXXXX"
             autocomplete="off"
             value=""
           />
@@ -50,8 +50,15 @@
             autocomplete="off"
           />
           <button type="submit" id="join-room"><span>Join room</span></button>
-          <button type="submit" id="test-room"><span>TEST</span></button>
+          <br />
+          <button type="submit" id="lobby-list"><span>Lobby List</span></button>
         </div>
+      </div>
+    </div>
+
+    <div id="lobby-selector">
+      <div class="lobby-box">
+        <div class="lobbies-list"></div>
       </div>
     </div>
 
